<resources>
    <string name="app_name">Quote-App</string>
    <string name="author">Author</string>
    <string name="quote">Quotes</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="nil">-</string>
    <string name="intro">Welcome Back</string>
    <string name="favourite">Favorites</string>
    <string name="fliters">Filters: </string>
    <string name="saved">Saved Quotes </string>
    <string name="emptyTxt">No quotes saved yet. Start saving your favorite quotes for inspiration!</string>
    <string name="Search">Search</string>
</resources>