<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/purple_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/nil"/>

        <ImageView
            android:id="@+id/ImageForQuote"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            app:layout_constraintEnd_toEndOf="@+id/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent" />

        <TextView
            android:id="@+id/WelcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/intro"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/background"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#80000000"
            app:layout_constraintEnd_toEndOf="@+id/viewPager"
            app:layout_constraintStart_toStartOf="@+id/viewPager"
            app:layout_constraintTop_toBottomOf="@+id/viewPager">

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share"
                android:foregroundTint="#FFFFFF"
                android:scaleType="fitXY"
                android:src="@drawable/shareicon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/btn_fav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favourite"
                android:hapticFeedbackEnabled="true"
                android:scaleType="fitXY"
                android:src="@drawable/like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_share"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.quote_app.CustomViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="200dp"
            android:contentDescription="@string/quote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.example.quote_app.CustomViewPager>

        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save"
            android:scaleType="fitXY"
            android:src="@drawable/favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/fliters"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ImageForQuote"
            app:layout_constraintStart_toStartOf="parent" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/nil"
            app:layout_constraintBottom_toBottomOf="@+id/filterid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/filterid"
            app:layout_constraintTop_toTopOf="@+id/filterid"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/nil">

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
