<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    style="@style/CutShape"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white">


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/editDeleteL"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quoteTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quote"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/authorTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:text="@string/author"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/editDeleteL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginVertical="4dp"
                    android:contentDescription="@string/nil"
                    android:src="@drawable/shareicon" />

                <ImageView
                    android:id="@+id/remove"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginVertical="20dp"
                    android:contentDescription="@string/nil"
                    android:scaleType="centerCrop"
                    android:src="@drawable/liked"
                    app:tint="@android:color/holo_red_dark" />
            </LinearLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
